--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -36,7 +36,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardDestaque"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="200dp"
                 android:layout_margin="24dp"
                 app:cardCornerRadius="8dp"
                 app:contentPadding="16dp">
@@ -68,16 +68,16 @@
 
         <LinearLayout
             android:id="@+id/layoutChart"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="60dp"
             android:layout_marginBottom="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/layoutDestaque"
             tools:layout_editor_absoluteX="10dp"
-            android:visibility="gone">
-
+            android:visibility="visible">
             <com.github.aachartmodel.aainfographics.aachartcreator.AAChartView
                 android:id="@+id/aaChartView"
                 android:layout_width="match_parent"
