--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -33,11 +33,52 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/chipGroup"
+                android:layout_width="wrap_content"
+                android:layout_gravity="end"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginStart="24dp"
+                android:background="#fafff7"
+                app:singleLine="true"
+                app:singleSelection="true">
+                <com.google.android.material.chip.Chip
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minWidth="20dp"
+                    android:id="@+id/chipUSD"
+                    android:text="@string/usd"
+                    android:checked="true"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    />
+
+                <com.google.android.material.chip.Chip
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minWidth="20dp"
+                    android:id="@+id/chipBRL"
+                    android:text="@string/brl"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    />
+
+                <com.google.android.material.chip.Chip
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minWidth="20dp"
+                    android:id="@+id/chipEUR"
+                    android:text="@string/eur"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    />
+            </com.google.android.material.chip.ChipGroup>
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardDestaque"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:layout_margin="24dp"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="24dp"
                 app:cardCornerRadius="8dp"
                 app:contentPadding="16dp">
 
